# zeal-pricing-tool

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  baseline_report.txt  pricing_alrgorithim.md  pyproject.toml  zeal_pricing_handoff_after_codex_prompt6.md
docs/: architecture.md  cardcash_fixture_capture.md  competitor_scraper_design.md  credential_day_runbook.md  credential_day_validation_plan.md  dashboard_usability_review_plan.md  decisions_log.md  ebay_scraper_handoff.md  historical_pricing_analysis.md  historical_pricing_findings.md  operator_demo_script.md  pricing_algorithm.md  spreadsheet_recon.md
docs/audit/: 00_summary.md  01_repo_inventory.md  02_dead_code_and_unused.md  03_docs_vs_code_drift.md  04_code_quality_findings.md  (+11 more)
scripts/: dump_cardcash_catalog.py  extract_baseline.py  historical_spreadsheet_recon.py  match_cardcash_ids.py  spreadsheet_parser.py
tests/: conftest.py  test_cardcash_scraper.py  test_competitor_aggregate.py  test_competitor_mapping.py  test_competitor_phase1.py  test_competitor_refresh.py  test_confidence.py  test_config.py  test_db_schema.py  test_ebay_average.py  test_ebay_client_factory.py  test_ebay_marketplace_insights_client.py  test_ebay_oauth.py  test_historical_spreadsheet_recon.py  test_listing_filter.py  test_models_merchant.py  test_pricing_blending.py  test_pricing_engine.py  test_pricing_engine_baseline.py  test_refresh_orchestrator.py  test_refresh_routes.py  test_repositories.py  test_seed_demo.py  test_smoke_ebay_cli.py  test_spreadsheet_parser.py  test_template_filters.py  test_web_routes.py
(+52 files in other folders)
