[project]
name = "zeal"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "httpx>=0.24",
    "pydantic>=2.5",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "uvicorn>=0.24",
    "python-dotenv>=1.2.2",
    "xlrd>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "respx>=0.21",
    "ruff>=0.1",
    "mypy>=1.7",
    "pytest-timeout>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zeal"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--continue-on-collection-errors --timeout=30 --timeout-method=thread"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
